...
                                <color key="backgroundColor" name="lipstick"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="60" id="3my-GL-sjb"/>
                                    <constraint firstAttribute="width" constant="280" id="Eaq-bq-QAl"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="25"/>
                                <state key="normal" title="Начать игру">
                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
                                <connections>
                                    <action selector="startGameButtonDidTapped:" destination="bow-2t-fyi" eventType="touchUpInside" id="siN-qO-vk8"/>
                                </connections>
                            </button>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hFQ-ym-wgf">
                                <rect key="frame" x="97.5" y="579" width="180" height="24"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="24" id="Kic-GS-v4e"/>
                                    <constraint firstAttribute="width" constant="180" id="ddA-sl-eqT"/>
                                </constraints>
                                <state key="normal" title="Об игре / Разработчиках">
                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
                                <connections>
                                    <segue destination="grm-T7-0u7" kind="show" id="s8H-dt-dnB"/>
                                </connections>
                            </button>
...
                                <rect key="frame" x="97.5" y="529" width="180" height="40"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="ICT-QM-h2u"/>
                                    <constraint firstAttribute="width" constant="180" id="MZp-wY-Aam"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="OpenSans" family="Open Sans" pointSize="20"/>
                                <state key="normal" title="Настройки">
                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
                                <connections>
                                    <segue destination="lWS-Ka-WKU" kind="show" id="e8s-uw-H6B"/>
                                </connections>
                            </button>
...
                            <constraint firstItem="NDE-DQ-sHE" firstAttribute="trailing" secondItem="Nil-Vo-g3n" secondAttribute="trailing" constant="30" id="JVh-Zb-Owc"/>
                            <constraint firstItem="Nil-Vo-g3n" firstAttribute="leading" secondItem="NDE-DQ-sHE" secondAttribute="leading" constant="31" id="LPE-yI-lrD"/>
                            <constraint firstItem="OYF-KU-6Nb" firstAttribute="top" secondItem="hFQ-ym-wgf" secondAttribute="bottom" constant="15" id="UBH-aY-gM8"/>
                            <constraint firstItem="UEm-ov-udw" firstAttribute="centerX" secondItem="sbM-06-t3z" secondAttribute="centerX" id="eU2-bb-jNM"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Правила игры" largeTitleDisplayMode="always" id="eVo-gA-CMV">
                        <barButtonItem key="rightBarButtonItem" style="plain" id="Shm-MH-gmR">
                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" id="DdI-VV-Ed1">
                                <rect key="frame" x="281" y="7" width="78" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <state key="normal" title="Настройки">
                                    <color key="titleColor" name="yellowishGreen"/>
...
            </objects>
            <point key="canvasLocation" x="2836" y="958"/>
        </scene>
        <!--Об игре-->
        <scene sceneID="8B0-Cy-dFp">
            <objects>
                <viewController title="Об игре" id="grm-T7-0u7" customClass="AboutGameViewController" customModule="HardcoreTap" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="pWJ-RP-xTH">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <tableView clipsSubviews="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" bouncesZoom="NO" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="SyL-pk-Y91">
                                <rect key="frame" x="0.0" y="96" width="375" height="522"/>
...
            <point key="canvasLocation" x="1579" y="-674"/>
        </scene>
        <!--Рекорды-->
        <scene sceneID="ktp-m5-7k1">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="0Qh-01-gta" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Рекорды" image="iconRaiting" selectedImage="iconRaiting" id="H8h-Ls-s24">
                        <color key="badgeColor" name="yellowishGreen"/>
                    </tabBarItem>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="9NR-uO-gAj">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="96"/>
                        <autoresizingMask key="autoresizingMask"/>
...
            <point key="canvasLocation" x="1579" y="123"/>
        </scene>
        <!--Правила-->
        <scene sceneID="hzn-LO-dqm">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="dCJ-Se-syC" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Правила" image="iconRules" selectedImage="iconRules" id="AsA-DB-DKx">
                        <color key="badgeColor" name="yellowishGreen"/>
                    </tabBarItem>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="kYc-H5-qXV">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="96"/>
                        <autoresizingMask key="autoresizingMask"/>
...
