...
  }
  
  @IBAction func loginDidTouch(_ sender: Any) {
    //Если не заполнили поля
    if textBox.text!.isEmpty {
      //Меняем цвет плейсхолдеров
      textBox.attributedPlaceholder = NSAttributedString(string: "Придумайте никнейм", attributes: [NSAttributedStringKey.foregroundColor: UIColor(red: 232/255, green: 45/255, blue: 111/255, alpha: 100)])
    } else {
      //скрываем клавиатуру
      self.view.endEditing(false)
      self.username = self.textBox.text!
      UserDefaults.standard.set(self.username, forKey: "userNAME")
      UserDefaults.standard.synchronize()
...
